--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Obsidian Unofficial Plugins 
+description: An unofficial catalog of Obsidian plugins.  Features plugins that are awaiting acceptance into the official community plugins list.
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://joepetrakovich.github.io/obsidian-unofficial-plugins
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+nav_enabled: false
+color_scheme: dark
