--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,16 @@ theme: just-the-docs
 
 url: https://joepetrakovich.github.io/obsidian-unofficial-plugins
 
+github_url: https://github.com
+
 aux_links:
 
 nav_enabled: false
-color_scheme: dark
+color_scheme: obsidian
+heading_anchors: false
+search:
+  heading_level: 4
+callouts:
+  warning:
+    title: Warning
+    color: yellow
