add token to workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
       - name: Update pending plugin data
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./fetch-pending-plugins.sh
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
